--- a/EFCoreStartProj/appsettings.json
+++ b/EFCoreStartProj/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=MonitorDataBase;User Id=sa;Password=Bohan233/;TrustServerCertificate=True;"
+    "DefaultConnection": "YOUR-API-KEY-HERE"
   }
 }
