--- a/compose.yaml
+++ b/compose.yaml
@@ -2,6 +2,7 @@ version: '3.8'
 services:
   sqlserver:
     image: mcr.microsoft.com/mssql/server
+    platform: linux/amd64
     environment:
       SA_PASSWORD: "Bohan233/"
       ACCEPT_EULA: "Y"
