--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -18,7 +18,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
-      <PackageReference Include="PostSharp" Version="2024.1.4" />
+<!--      <PackageReference Include="PostSharp" Version="2024.1.4" />-->
     </ItemGroup>
 
 
