--- a/Worker/Worker.csproj
+++ b/Worker/Worker.csproj
@@ -11,16 +11,15 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
         <PackageReference Include="Microsoft.Playwright" Version="1.44.0" />
+        <PackageReference Include="Quartz" Version="3.9.0" />
+        <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.9.0" />
+        <PackageReference Include="Quartz.Extensions.Hosting" Version="3.9.0" />
     </ItemGroup>
 
     <ItemGroup>
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="DataConsummers\" />
     </ItemGroup>
 
     <ItemGroup>
