--- a/compose.yaml
+++ b/compose.yaml
@@ -9,8 +9,8 @@ services:
     ports:
       - "1433:1433"
     volumes:
-      - sqlserverdata:/var/opt/mssql
+      - sqlserver-data:/var/opt/mssql
 
 volumes:
-  sqlserverdata:
+  sqlserver-data:
     driver: local
