--- a/Worker/Worker.csproj
+++ b/Worker/Worker.csproj
@@ -9,11 +9,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.3.0" />
+        <PackageReference Include="Microsoft.AspNet.WebApi.WebHost" Version="5.3.0" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
         <PackageReference Include="Microsoft.Playwright" Version="1.44.0" />
-        <PackageReference Include="Quartz" Version="3.9.0" />
-        <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.9.0" />
-        <PackageReference Include="Quartz.Extensions.Hosting" Version="3.9.0" />
+        <PackageReference Include="Quartz" Version="3.10.0" />
+        <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.10.0" />
+        <PackageReference Include="Quartz.Extensions.Hosting" Version="3.10.0" />
     </ItemGroup>
 
     <ItemGroup>
